foo
   Compiling embryo v0.1.0 (/var/home/alexispurslane/Development/embryo-engine)
warning: value assigned to `avg_fps` is never read
   --> src/render_thread.rs:302:17
    |
302 |         let mut avg_fps = 144.0;
    |                 ^^^^^^^
    |
    = help: maybe it is overwritten before being read?
    = note: `#[warn(unused_assignments)]` on by default

warning: variable does not need to be mutable
   --> src/resource_manager.rs:202:17
    |
202 |             let mut model = Model::from_gltf(gltf).expect("Unable to load model");
    |                 ----^^^^^
    |                 |
    |                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

error[E0502]: cannot borrow `self.entities` as immutable because it is also borrowed as mutable
   --> src/update_thread.rs:250:31
    |
246 |                       let mut tcs = self
    |  ___________________________________-
247 | |                         .entities
    | |_________________________________- mutable borrow occurs here
...
250 |                       let hcs = self.entities.get_component_vec::<HierarchyComponent>();
    |                                 ^^^^^^^^^^^^^ immutable borrow occurs here
251 |                       for eid in 0..tcs.len() {
    |                                     --- mutable borrow later used here

error[E0502]: cannot borrow `self.entities` as immutable because it is also borrowed as mutable
   --> src/update_thread.rs:260:63
    |
246 |                       let mut tcs = self
    |  ___________________________________-
247 | |                         .entities
    | |_________________________________- mutable borrow occurs here
...
252 |                           let (a, b) = tcs.split_at_mut(eid);
    |                                        --- mutable borrow later used here
...
260 |                               if let Some(parent) = hc.and_then(|hc| {
    |                                                                 ^^^^ immutable borrow occurs here
...
269 |                                           self.entities
    |                                           ------------- second borrow occurs due to use of `self.entities` in closure

For more information about this error, try `rustc --explain E0502`.
warning: `embryo` (bin "embryo") generated 2 warnings
error: could not compile `embryo` (bin "embryo") due to 2 previous errors; 2 warnings emitted
